<resources>
    <string name="car_num_exp">^[京津沪渝冀豫云辽黑湘皖鲁新苏浙赣鄂桂甘晋蒙陕吉闽贵粤青藏川宁琼使领A-Z]{1}[A-Z]{1}[A-Z0-9]{4}[A-Z0-9挂学警港澳]{1}$</string>

    <!--登录-->
    <string name="login_name">账号</string>
    <string name="login_password">密码</string>
    <string name="login_login">登录</string>

    <!--未入库列表-->
    <string name="disin_title">未入库列表</string>
    <string name="disout_title">未出库列表</string>

    <!--入库扫描-->
    <string name="inscan_title">入库扫描</string>
    <string name="inscan_current_scan">当前扫描：</string>
    <string name="inscan_scaned">已经扫描：</string>
    <string name="inscan_disin">未入库列表</string>
    <string name="inscan_in_failed">入库失败</string>
    <string name="inscan_in_failed_part">入库失败</string>
    <string name="inscan_in_success">入库成功</string>

    <!--出库-->
    <string name="out_title">出库</string>
    <string name="out_all_out">全车出库</string>
    <string name="out_out_success">出库成功</string>
    <string name="out_out_failed">出库失败</string>

    <!--出库必填信息-->
    <string name="outinfo_title">出库必填信息</string>
    <string name="outinfo_carrier">承运方：</string>
    <string name="outinfo_carNum">车牌号:</string>
    <string name="outinfo_releaseWay">提货方式:</string>
    <string name="outinfo_loadingCar">装车班组:</string>
    <string name="outinfo_clear">清空</string>
    <string name="outinfo_sure">确定</string>
    <string name="outinfo_perfect_info">请完善信息</string>
    <string name="outinfo_carnum_err">请填写正确的车牌号码</string>
    <string name="outinfo_dialog_title">提示</string>
    <string name="outinfo_dialog_contnet">有未完成出库任务，是否继续出库？</string>
    <string name="outinfo_dialog_continue">继续</string>

    <!--出库扫描-->
    <string name="outscan_title">出库扫描</string>
    <string name="outscan_current_scan">当前扫描：</string>
    <string name="outscan_scaned">已经扫描：</string>
    <string name="outscan_out">出库</string>
    <string name="outscan_unout_list">未出库列表</string>
    <string name="outscan_skip">跳过</string>
    <string name="outscan_in_list">已经在出库列表</string>
    <string name="outscan_different">不同部件</string>
    <string name="outscan_unfinish_scan">还有条码未扫描</string>
    <string name="outscan_dialog_exit">退出扫描</string>
    <string name="outscan_dialog_exit_content">确定要退出出库扫描吗</string>

    <!--指定货架-->
    <string name="bind_shelf_title">指定货架</string>
    <string name="bind_shelf_bztm">部件码:</string>
    <string name="bind_shelf_auto_submit">自动提交</string>
    <string name="bind_shelf_add_shelf">添加货架码</string>
    <string name="bind_shelf_rescan">重新扫描</string>
    <string name="bind_shelf_toast_add_shelf">请添加货架码</string>
    <string name="bind_shelf_bind_success">绑定成功</string>
    <string name="bind_shelf_bind_failed">绑定失败</string>
    <string name="bind_shelf_dialog_contnet">全部扫描完成，是否继续指定货架？</string>

    <!--APP信息-->
    <string name="appversion_title">关于软件</string>
    <string name="appversion_version">版本：（%1$s）</string>
    <string name="appversion_update">软件更新</string>
    <string name="appversion_new_version">新版本</string>
    <string name="appversion_dialog_update_title">版本检测</string>
    <string name="appversion_dialog_update_contnet">当前版本不是最新,请联系信息及流程中心协助更新!</string>

    <string name="dialog_cancel">取消</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_sure_exit">确定要退出吗？</string>

    <string name="dialog_order_noscan_finish">该订单未完成扫描，是否挂起？</string>
    <string name="dialog_button_hangup">挂起</string>
    <string name="dialog_button_refuse">拒绝</string>
    
    <string name="hangup_tips">挂起提示</string>
    <string name="confirm">确定</string>
    <string name="select_date">选择日期：</string>

    <string name="text_on_shelf_scan">上架扫描</string>

    <string name="text_select_all">全选</string>
    <string name="text_bind">绑定</string>
    <string name="text_count_total">共%d大件</string>

    <string name="text_crm_order_number">CRM订单号</string>
    <string name="text_part_identification">部件标识</string>
    <string name="text_production_sub_order">生产子订单</string>
    <string name="text_sales_order_number">销售订单号</string>
    <string name="text_packing_order">包装顺序</string>
    <string name="text_packing_barcode">包装条码</string>

    <string name="text_tips">温馨提示</string>
    <string name="text_onshelf_scan_message">确定删除此条数据吗？</string>
    <string name="text_bound_shelf">绑定货架</string>

    <string name="tip_total_packages">总包数：%d</string>
    <string name="tip_shelf_position">货架位：%s</string>
    <string name="tip_listed_by">上架人：%s</string>
    <string name="text_rescan">重新扫描</string>

    <string name="text_barcode_exists">该包装条码已存在</string>
    <string name="text_submit_error">无符合条件的数据</string>
    <string name="tip_hide_data">此处隐藏了%d条</string>
</resources>
