<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/llmain"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_24"
        android:src="@drawable/new_holike_log" />

    <EditText
        android:id="@+id/et_login_name"
        style="@style/et_enter"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_46"
        android:hint="@string/login_name"
        android:maxLength="11" />

    <EditText
        android:id="@+id/et_login_password"
        style="@style/et_enter"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_16"
        android:hint="@string/login_password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/btn_login_login"
        style="@style/btn_submit"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:text="@string/login_login" />
</LinearLayout>