<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_10"
    android:background="@color/color_while"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/layer_uncheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_8"
            android:layout_marginRight="@dimen/dp_8"
            android:layout_weight="1.3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_crm_order_number"
                android:textColor="@color/textColor4"
                android:textSize="@dimen/textSize_13" />

            <TextView
                android:id="@+id/tv_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:textColor="@color/textColor6"
                android:textSize="@dimen/textSize_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/text_part_identification"
                android:textColor="@color/textColor4"
                android:textSize="@dimen/textSize_13" />

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor6"
                android:textSize="@dimen/textSize_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_production_sub_order"
                android:textColor="@color/textColor4"
                android:textSize="@dimen/textSize_13" />

            <TextView
                android:id="@+id/tv_child_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:textColor="@color/textColor6"
                android:textSize="@dimen/textSize_12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/text_sales_order_number"
                android:textColor="@color/textColor4"
                android:textSize="@dimen/textSize_13" />

            <TextView
                android:id="@+id/tv_sales_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor6"
                android:textSize="@dimen/textSize_12" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_packing_order"
            android:textColor="@color/textColor4"
            android:textSize="@dimen/textSize_13" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_packing_barcode"
            android:textColor="@color/textColor4"
            android:textSize="@dimen/textSize_13" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/tv_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_4"
        android:text="@string/tip_hide_data"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSize_13"
        android:visibility="gone" />
</LinearLayout>