<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haolaike.hotlikescan.activities.OutScanActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/bg_booting_top"
        android:gravity="center"
        android:text="@string/outscan_title"
        android:textSize="@dimen/textSize_20" />

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outscan_current_scan" />

        <EditText
            android:id="@+id/tv_outwarehose_sacnCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_weight="1"
            android:textColor="@color/textColor5" />

        <TextView
            android:id="@+id/btn_outwarehose_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/textColor6"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="确定"/>
    </LinearLayout>

    <View style="@style/divider_horizontal" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_outwarehose"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_weight="1" />

    <View style="@style/divider_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outscan_scaned" />

        <TextView
            android:id="@+id/tv_inwarehose_scanNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textColor="@color/textColor5"
            android:textSize="@dimen/textSize_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_outwarehose"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_grey"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/outscan_out" />

        <View
            style="@style/divider_vertical"
            android:background="@color/white" />

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_grey"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/outscan_skip" />
    </LinearLayout>
</LinearLayout>
