<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haolaike.hotlikescan.activities.InScanActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:background="@color/bg_booting_top"
        android:gravity="center"
        android:text="@string/inscan_title"
        android:textSize="@dimen/textSize_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscan_current_scan"
            android:textSize="@dimen/textSize_14" />

        <EditText
            android:id="@+id/tv_inwarehose_sacnCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:gravity="center|start"
            android:background="@null"
            android:imeOptions="actionDone"
            android:textColor="@color/textColor5"
            android:textSize="@dimen/textSize_14" />

        <TextView
            android:id="@+id/btn_inwarehose_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/confirm"
            android:textColor="@color/textColor6"
            android:textSize="@dimen/textSize_14" />

    </LinearLayout>

    <View style="@style/divider_horizontal" />
</LinearLayout>
